tests/syntax_error/bad_array.jou
def foo() -> void:
    x = [1 2]  # Error: expected a ']' to end the array, got an integer
